{
  "{_}": "{_}",
  "Home": "Home",
  "All messages": "All messages",
  "Private messages": "Private messages",
  "Starred": "Starred",
  "Mentions": "Mentions",
  "No recent conversations": "No recent conversations",
  "No results": "No results",
  "No messages": "No messages",
  "No messages on server": "No messages on server",
  "No messages in stream": "No messages in stream",
  "No messages with this topic": "No messages with this topic",
  "No messages with this person": "No messages with this person",
  "No messages in this group": "No messages in this group",
  "No unread messages": "No unread messages",
  "Pick account": "Pick account",
  "Welcome": "Welcome",
  "Subscriptions": "Subscriptions",
  "Your server URL": "Your server URL",
  "Search": "Search",
  "Log in": "Log in",
  "Enter": "Enter",
  "Switch": "Switch",
  "Logout": "Logout",
  "Add new account": "Add new account",
  "Search messages": "Search messages",
  "Search people": "Search people",
  "All streams": "All streams",
  "Write a message...": "Write a message...",
  "Email": "Email",
  "Username": "Username",
  "Password": "Password",
  "Server URL": "Server URL",
  "Why not start the conversation?": "Why not start the conversation?",
  "Chat": "Chat",
  "Log in with Google": "Log in with Google",
  "Log in with GitHub": "Log in with GitHub",
  "Log in with password": "Log in with password",
  "Log in with dev account": "Log in with dev account",
  "Can not connect to server": "Can not connect to server",
  "Wrong email or password. Try again.": "Wrong email or password. Try again.",
  "Wrong username or password. Try again.": "Wrong username or password. Try again.",
  "Enter a valid email address": "Enter a valid email address",
  "Enter a username": "Enter a username",
  "Enter a password": "Enter a password",
  "Narrow to conversation": "Narrow to conversation",
  "Reply": "Reply",
  "Copy to clipboard": "Copy to clipboard",
  "Mute topic": "Mute topic",
  "Unmute topic": "Unmute topic",
  "Mute stream": "Mute stream",
  "Unmute stream": "Unmute stream",
  "No Internet connection": "No Internet connection",
  "Settings": "Settings",
  "Night mode": "Night mode",
  "Language": "Language",
  "Topic": "Topic",
  "Type a message": "Type a message",
  "Message group": "Message group",
  "starred": "starred",
  "Enable notifications": "Enable notifications",
  "Jot down something": "Jot down something",
  "Message {recipient}": "Message {recipient}",
  "Send private message": "Send private message",
  "Forgot password?": "Forgot password?",
  "Members": "Members",
  "Group details": "Group details",
  "Delete message": "Delete message",
  "Notifications when online": "Notifications when online",
  "Notifications when offline": "Notifications when offline",
  "Stream notifications": "Stream notifications",
  "Unread": "Unread",
  "Subscribed": "Subscribed",
  "No users found": "No users found",
  "No streams found": "No streams found",
  "New group chat": "New group chat",
  "Diagnostics": "Diagnostics",
  "Toggle compose tools": "Toggle compose tools",
  "Terms of service": "Terms of service",
  "Privacy policy": "Privacy policy",
  "Timing": "Timing",
  "Variables": "Variables",
  "Storage": "Storage",
  "Mark as read": "Mark as read",
  "Mark all as read": "Mark all as read",
  "Mark stream as read": "Mark stream as read",
  "Mark topic as read": "Mark topic as read",
  "unread message": "unread message",
  "unread messages": "unread messages",
  "Create group": "Create group",
  "Share": "Share",
  "Star message": "Star message",
  "Unstar message": "Unstar message",
  "Cancel": "Cancel",
  "Message copied": "Message copied",
  "Edit message": "Edit message",
  "Network request failed": "Network request failed",
  "show": "show",
  "hide": "hide",
  "Debug": "Debug",
  "Render messages with HTML": "Render messages with HTML",
  "Distinguish unread messages": "Distinguish unread messages",
  "Split message text": "Split message text",
  "Administrators": "Administrators",
  "Normal users": "Normal users",
  "Share image": "Share image",
  "Share link to image": "Share link to image",
  "You are not subscribed to this stream": "You are not subscribed to this stream",
  "Create new stream": "Create new stream",
  "Name": "Name",
  "Description": "Description",
  "Create": "Create",
  "Public": "Public",
  "Private": "Private",
  "Notifications": "Notifications",
  "Stream": "Stream",
  "Edit": "Edit",
  "Muted topics": "Muted topics",
  "Edit stream": "Edit stream",
  "OK": "OK",
  "Can not share": "Can not share",
  "Download complete": "Download complete",
  "Can not download": "Can not download",
  "Download file": "Download file",
  "Update": "Update",
  "Save": "Save",
  "Pinned": "Pinned",
  "Pin": "Pin",
  "Active": "Active",
  "Idle": "Idle",
  "Offline": "Offline",
  "Do not mark messages read on scroll": "Do not mark messages read on scroll",
  "Topics": "Topics"
}
