{
  "{_}": "{_}",
  "I have a Zulip account": "已有Zulip账户",
  "I am new to Zulip": "新用户",
  "Home": "主页",
  "All messages": "所有消息",
  "Private messages": "私有消息",
  "Starred": "标星消息",
  "Mentions": "被提及消息",
  "No recent conversations": "没有最近的对话",
  "No results": "没有结果",
  "No messages": "没有消息",
  "No messages on server": "服务器上没有消息",
  "No messages in stream": "频道里没有消息",
  "No messages with this topic": "该主题没有消息",
  "No messages with this person": "该用户没有消息",
  "No messages in this group": "该组没有消息",
  "No unread messages": "没有未读消息",
  "Pick account": "选择帐户",
  "Welcome": "欢迎",
  "Welcome!": "欢迎！",
  "Organization URL": "组织网址",
  "Subscriptions": "订阅",
  "Search": "搜索",
  "Log in": "登录",
  "Enter": "进入",
  "Switch": "切换",
  "Logout": "退出",
  "Add new account": "新增帐户",
  "Search messages": "搜索消息",
  "Search people": "搜索用户",
  "All streams": "所有频道",
  "Write a message...": "写消息...",
  "Email": "邮箱",
  "Username": "用户名",
  "Password": "密码",
  "Why not start the conversation?": "何不开始对话？",
  "Chat": "聊天",
  "Log in with Google": "用Google账号登录",
  "Log in with GitHub": "用Github账号登录",
  "Log in with password": "用账户密码登录",
  "Log in with dev account": "用开发账号登录",
  "Cannot connect to server": "无法连接服务器",
  "Wrong email or password. Try again.": "邮箱或密码错误，请重试。",
  "Wrong username or password. Try again.": "用户名或密码错误，请重试。",
  "Enter a valid email address": "请输入有效的邮箱地址",
  "Enter a username": "输入用户名",
  "Enter a password": "请输入密码",
  "Narrow to conversation": "缩短对话",
  "Reply": "回复",
  "Add a reaction": "添加映射",
  "Copy to clipboard": "复制到剪贴板",
  "Mute topic": "静音主题",
  "Unmute topic": "非静音主题",
  "Mute stream": "静音频道",
  "Unmute stream": "非静音频道",
  "No Internet connection": "无互联网连接",
  "Settings": "设置",
  "Night mode": "夜间模式",
  "Language": "语言",
  "Topic": "话题",
  "Type a message": "输入消息",
  "Message group": "消息群组",
  "starred": "标星消息",
  "Enable notifications": "允许通知",
  "Jot down something": "记下一些东西",
  "Message {recipient}": "消息 {接收人}",
  "Send private message": "发送私有消息",
  "Forgot password?": "忘记密码？",
  "Members": "成员",
  "Recipients": "收件人",
  "Delete message": "删除消息",
  "Notifications when online": "上线时通知",
  "Notifications when offline": "离线时通知",
  "Stream notifications": "频道通知",
  "Unread": "未读",
  "Subscribed": "已订阅",
  "No users found": "未找到用户",
  "No streams found": "频道不存在",
  "Diagnostics": "诊断",
  "Toggle compose tools": "切换组合工具",
  "Legal": "法律信息",
  "Terms of service": "服务协议",
  "Privacy policy": "隐私策略",
  "Timing": "时间轴",
  "Variables": "更改",
  "Storage": "存储",
  "Mark as read": "标记为已读",
  "Mark all as read": "标记所有为已读",
  "Mark stream as read": "标记频道为已读",
  "Mark topic as read": "标记主题为已读",
  "unread message": "未读消息",
  "unread messages": "未读消息",
  "Create group": "创建群组",
  "Share": "分享",
  "Star message": "信息标星",
  "Unstar message": "取消信息标星",
  "Cancel": "取消",
  "Message copied": "消息已复制",
  "Edit message": "编辑消息",
  "Network request failed": "网络请求失败",
  "show": "显示",
  "hide": "隐藏",
  "Debug": "故障诊断",
  "Render messages with HTML": "用HTML渲染消息",
  "Distinguish unread messages": "区分未读消息",
  "Split message text": "拆分消息文本",
  "Administrators": "管理员",
  "Normal users": "普通用户",
  "Share image": "分享图片",
  "Share link to image": "分享图片链接",
  "You are not subscribed to this stream": "您未订阅此频道",
  "Create new stream": "创建新频道",
  "Name": "名称",
  "Description": "描述",
  "Create": "创建",
  "Public": "公开",
  "Private": "私有",
  "Notifications": "通知设置",
  "Stream": "频道",
  "Edit": "编辑",
  "Muted topics": "已静音主题",
  "Edit stream": "编辑频道",
  "OK": "确定",
  "Can not share": "无法分享",
  "Download complete": "下载完成",
  "Can not download": "无法下载",
  "Download file": "下载文件",
  "Update": "更新",
  "Save": "保存",
  "Pinned": "已固定",
  "Pin": "固定",
  "Active": "在线",
  "Idle": "空闲",
  "Offline": "已下线",
  "Do not mark messages read on scroll": "滚动阅读时不要标记消息",
  "Topics": "主题",
  "Welcome to Zulip!\n\nYou'll need to first create an account from your computer. If you're not sure where to start, go to zulipchat.com from your web browser.\n\nHope to see you back here soon!\n": "欢迎使用Zulip！\n\n您需要在电脑上使用浏览器打开zulipchat.com，然后新建一个账户。\n\n稍后见\n",
  "Add subscribers": "添加订阅者",
  "Only organization admins are allowed to post to this stream.": "只有组织管理员可以发布到这个频道。"
}
